# ruyi-ng

./: README.md  flake.nix  pyproject.toml  registries.conf  ruyi
.github/workflows/: build.yml
contrib/registry/: docker-compose.yaml
contrib/slides/intro/: ruyi.tex
ruyi_ng/: bubblewrap.py  ruyi.py  subordinate.py
